// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test on TicTacToe Component Should render endGame inside tictactoe 1`] = `
<section
  className="w-100 bgNewlikeblue"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-lg-8 col-12 m-auto"
      >
        <div
          className="row"
        >
          <div
            className="col-lg-9 col-12 m-auto"
          >
            <section
              className="w-100 text-center"
            >
              <p
                className="h1"
              >
                Tie
              </p>
              <section
                className="w-100 px-5"
              >
                <img
                  alt=""
                  className="w-100 img-fluid rounded py-3 px-5"
                  data-test="placarimg"
                  src="test-file-stub"
                />
              </section>
              <span
                aria-hidden="true"
                className="btnstyle"
                onClick={[Function]}
              >
                Play again
              </span>
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Test on TicTacToe Component Should render without props and start on StartGame page 1`] = `
<section
  className="w-100 bgNewlikeblue"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-lg-8 col-12 m-auto"
      >
        <div
          className="row"
        >
          <div
            className="col-lg-6 col-12"
          >
            <p
              className="h1 pb-5"
            >
              Tic Tac Toe
            </p>
            <p
              className="h3 py-3"
              data-test="players"
            >
              Player One: 
              <strong
                className="text-danger"
              >
                X
              </strong>
            </p>
            <p
              className="h3 "
              data-test="players"
            >
              Player Two: 
              <strong
                className="text-danger"
              >
                O
              </strong>
            </p>
          </div>
          <div
            className="col-lg-6 col-12"
          >
            <section
              className="w-100 text-center"
            >
              <section
                className="w-100 px-5 mb-3"
              >
                <img
                  alt="Tic Tac Toe"
                  className="w-100 img-fluid rounded"
                  src="test-file-stub"
                />
              </section>
              <span
                aria-hidden="true"
                className="btnstyle"
                onClick={[Function]}
              >
                Start Game
              </span>
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Test on TicTacToe Component Sould render gamepage inside of tictoctoe 1`] = `
<section
  className="w-100 bgNewlikeblue"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-lg-8 col-12 m-auto"
      >
        <section
          className="w-100"
        >
          <section
            className="w-100 text-right pb-3"
          >
            <span
              aria-hidden="true"
              className="btnstyle"
              onClick={[Function]}
            >
              Reset
            </span>
          </section>
          <section
            className="w-100"
          >
            <div
              className="col-lg-9 col-12 m-auto"
            >
              <div
                className="row m-0"
              >
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box0col0"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box0col1"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box0col2"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
              </div>
            </div>
            <div
              className="col-lg-9 col-12 m-auto"
            >
              <div
                className="row m-0"
              >
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box1col0"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box1col1"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box1col2"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
              </div>
            </div>
            <div
              className="col-lg-9 col-12 m-auto"
            >
              <div
                className="row m-0"
              >
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box2col0"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box2col1"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box2col2"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
              </div>
            </div>
          </section>
          <section
            className="w-100 text-right pt-3"
          >
            <p
              className="h3"
            >
              Turn of the Player  X
            </p>
          </section>
        </section>
      </div>
    </div>
  </div>
</section>
`;

exports[`Test on TicTacToe Component handleDispatch should return null 1`] = `
<section
  className="w-100 bgNewlikeblue"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-lg-8 col-12 m-auto"
      >
        <section
          className="w-100"
        >
          <section
            className="w-100 text-right pb-3"
          >
            <span
              aria-hidden="true"
              className="btnstyle"
              onClick={[Function]}
            >
              Reset
            </span>
          </section>
          <section
            className="w-100"
          >
            <div
              className="col-lg-9 col-12 m-auto"
            >
              <div
                className="row m-0"
              >
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box0col0"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box0col1"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box0col2"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
              </div>
            </div>
            <div
              className="col-lg-9 col-12 m-auto"
            >
              <div
                className="row m-0"
              >
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box1col0"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box1col1"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box1col2"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
              </div>
            </div>
            <div
              className="col-lg-9 col-12 m-auto"
            >
              <div
                className="row m-0"
              >
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box2col0"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box2col1"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
                <div
                  aria-hidden="true"
                  className="col clickText  tictok box2col2"
                  data-testrefer=""
                  onClick={[Function]}
                >
                  
                </div>
              </div>
            </div>
          </section>
          <section
            className="w-100 text-right pt-3"
          >
            <p
              className="h3"
            >
              Turn of the Player  X
            </p>
          </section>
        </section>
      </div>
    </div>
  </div>
</section>
`;
